--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,8 +13,8 @@
             <label class="form-label">Password</label>
             <input formControlName="password" type="password" class="form-control border-dark">
           </div>
-          <input type="submit" value="Enviar">
-          <button *ngIf = "isLoged==true" type="submit" value="Enviar" class="btn btn-primary">enviar</button>
+          <!--<input type="submit" value="Enviar">-->
+          <input type="submit" value="Enviar" class="btn btn-primary">
         </form>
 
       </div>
