--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,12 +1,10 @@
   <div class="container bg-primary my-4 rounded-5">
 
     <div class="row">
-      <div class="col-4"></div>
-      <div class="col-7 border-light my-3">
-        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Educación   </h1>
-        <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/New" type="submit">    +    </button>
+      <div class="col border-light my-3">
+        <h1 class="align-middle fw-bold d-inline text-white text-center py-0 px-3">Educación   </h1>
+        <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/New/educacion" type="submit">    +    </button>
       </div>
-      <div class="col-1"></div>
     </div>
 
     <div class="row">
@@ -23,7 +21,7 @@
               <p class="card-text">{{educacion.titulo}}</p>
               <p class="card-text">{{educacion.descripcion}}</p>
               <p class="card-text"><small class="text-muted">{{educacion.estado}}</small></p>
-              <button *ngIf ="isLoged==true" (click)="delete(educacion.id)" class="d-inline btn-danger btn btn-outline-success btn-outline-light py-0" type="submit">borrar</button>
+              <button *ngIf ="isLoged==true" (click)="deleteEducacion(educacion.id)" class="d-inline btn-danger btn btn-outline-success btn-outline-light py-0" type="submit">borrar</button>
               <button *ngIf ="isLoged==true" class="btn btn-outline-success btn-dark btn-outline-light py-0" routerLink="/EditAndNew/educacion/{{educacion.id}}" type="submit">editar</button>
             </div>
           </div>
