--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,12 +1,10 @@
   <div class="container my-4 bg-primary rounded-5 ">
 
     <div class="row">
-      <div class="col-4"></div>
-      <div class="col-7 border-light my-3">
+      <div class="col border-light my-3 mx-3">
         <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Proyectos(Proximamente)    </h1>
-        <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
+        <button *ngIf ="isLoged==true" class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
       </div>
-      <div class="col-1"></div>
     </div>
 
     <div class="row">
