--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,10 +1,7 @@
   <div class="container my-4 bg-primary rounded-5 ">
 
     <div class="row">
-      <div class="col border-light my-3 mx-3">
-        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Proyectos(Proximamente)    </h1>
-        <button *ngIf ="isLoged==true" class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
-      </div>
+      <h1 class="my-3 align-middle fw-bold d-inline text-white text-center py-0">Proyectos(Proximamente)    <button *ngIf ="isLoged==true" class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button></h1>
     </div>
 
     <div class="row">
