--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,10 +1,7 @@
   <div class="container bg-primary my-4 rounded-5">
 
     <div class="row">
-      <div class="col border-light my-3">
-        <h1 class="align-middle fw-bold d-inline text-white text-center py-0 px-3">Educación   </h1>
-        <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/New/educacion" type="submit">    +    </button>
-      </div>
+      <h1 class="my-3 align-middle fw-bold d-inline text-white text-center py-0 px-3">Educación   <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/New/educacion" type="submit">    +    </button></h1>
     </div>
 
     <div class="row">
@@ -14,9 +11,13 @@
 
 
           <div *ngFor ="let educacion of educaciones" class="card rounded-5 border-0 mb-3 mx-3 mt-0"><!--*ngIf = "educaciones.length > 0 "-->
-            <img [src]="educacion.img" class="card-img-top rounded-5" alt="..."><!--"/assets/img/ic-fader.jpg"-->
             <div class="card-body">
-              <h5 class="card-title">{{educacion.img}}</h5>
+
+              <div *ngIf="educacion.img">
+                <img src="" class="card-img-top rounded-5" alt="...">
+                <h5 class="card-title">{{educacion.img}}</h5>
+              </div>
+
               <h5 class="card-title">{{educacion.institucion}}</h5>
               <p class="card-text">{{educacion.titulo}}</p>
               <p class="card-text">{{educacion.descripcion}}</p>
