--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,8 +43,16 @@
     </div>
   </div>
 
+
+
   <div class="container-fluid position-absolute top-0 start-0 z-2">
+
     <img src="/assets/img/perfil extendido.png" alt="" class="img-fluid">
+    
+  </div>
+
+  <div class=" position-absolute top-0 start-0 z-2">
+    <button *ngIf ="isLoged==true" class="btn btn-outline-dark btn-warning btn-outline-success btn-sm py-0 px-1" routerLink="/EditAndNew" type="submit">editar</button>
   </div>
 
 </div>
